# cargo-wipe

./: Cargo.toml  README.md
src/: main.rs
