[package]
name = "cargo-wipe"
version = "0.1.0"
edition = "2021"
description = "A TUI for finding and reclaiming disk space from Cargo target/ directories"
license = "MIT"
repository = "https://github.com/markonyango/cargo-wipe"
homepage = "https://github.com/markonyango/cargo-wipe"
documentation = "https://docs.rs/cargo-wipe"
readme = "README.md"
keywords = ["cargo", "tui", "disk-space", "cleanup", "workspace"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
authors = ["Mark Onyango <mark.onyango@gmail.com>"]
exclude = [".github/", "*.gif", "*.png"]

[[bin]]
name = "cargo-wipe"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
anyhow = "1"
bytesize = "1"
rayon = "1"
